@@ -27,6 +27,7 @@
 #include "icons.h"
 #include "interfacesettings.h"
 #include "streamssettings.h"
+#include "onlinesettings.h"
 #include "serversettings.h"
 #include "playbacksettings.h"
 #include "filesettings.h"
@@ -69,6 +70,7 @@ PreferencesDialog::PreferencesDialog(QWidget *parent)
     files = new FileSettings(0);
     interface = new InterfaceSettings(0);
     streams = new StreamsSettings(0);
+    online = new OnlineSettings(0);
     context = new ContextSettings(0);
     cache = new CacheSettings(0);
     server->load();
@@ -76,12 +78,14 @@ PreferencesDialog::PreferencesDialog(QWidget *parent)
     files->load();
     interface->load();
     streams->load();
+    online->load();
     context->load();
     widget->addPage(server, i18n("Collection"), Icons::self()->libraryIcon, i18n("Collection Settings"));
     widget->addPage(playback, i18n("Playback"), Icon("media-playback-start"), i18n("Playback Settings"));
     widget->addPage(files, i18n("Files"), Icons::self()->filesIcon, i18n("File Settings"));
     widget->addPage(interface, i18n("Interface"), Icon("preferences-other"), i18n("Interface Settings"));
     widget->addPage(streams, i18n("Streams"), Icons::self()->radioStreamIcon, i18n("Streams Settings"));
+    widget->addPage(online, i18n("Online"), Icon("applications-internet"), i18n("Online Providers"));
     widget->addPage(context, i18n("Context"), Icons::self()->contextIcon, i18n("Context View Settings"));
     #ifdef TAGLIB_FOUND
     http = new HttpServerSettings(0);
@@ -137,6 +141,7 @@ void PreferencesDialog::writeSettings()
     files->save();
     interface->save();
     streams->save();
+    online->save();
     #ifdef TAGLIB_FOUND
     if (http) {
         http->save();
